# changer_metadata

./: .gitignore  com.github.ivantretyak.ChangeMetadaPDF.json  com.github.ivantretyak.changemetadapdf.json  com.github.ivantretyak.changemetadapdf.json~  meson.build
data/: com.github.ivantretyak.ChangeMetadaPDF.appdata.xml.in  com.github.ivantretyak.ChangeMetadaPDF.desktop.in  com.github.ivantretyak.ChangeMetadaPDF.gschema.xml  com.github.ivantretyak.changemetadapdf.appdata.xml.in  com.github.ivantretyak.changemetadapdf.desktop.in  com.github.ivantretyak.changemetadapdf.gschema.xml  meson.build
data/icons/: icons.sh
po/: POTFILES  com.github.ivantretyak.ChangeMetadaPDF.pot  com.github.ivantretyak.changemetadapdf.pot  meson.build  ru.mo  ru.po
src/: ChangeMetadaPDF.gresource.xml  ChangeMetadaPDF.in  changemetadapdf.gresource.xml  changemetadapdf.in  main.py  meson.build  pdf.py  window.py  window.ui~
src/ui/: about.ui  window.ui
